sticky-sidebarのバグ修正

--- a/src/ejs/works/index.ejs
+++ b/src/ejs/works/index.ejs
@@ -1,8 +1,8 @@
-<% var path = './'; %>
+<% var path = '../'; %>
 <% var page = {
-    title : "TOP PAGE",
-    description : "TOP PAGE DESCRIPTION",
-    og_title: "TOP PAGE",
+    title : "WORKS PAGE",
+    description : "WORKS PAGE DESCRIPTION",
+    og_title: "WORKS PAGE",
     og_type: "",
     og_url: "",
     og_image: "",
@@ -13,7 +13,8 @@
     namespace: "home"
 }; %>
 <%- include(path + 'partials/_header', { path : path, page : page }); %>
-            <div id="p-index">
-                <h1>Hello</h1>
-            </div><!-- / #p-index -->
+            <div id="p-works">
+                <h1>Works</h1>
+               
+            </div><!-- / #p-works -->
 <%- include(path + 'partials/_footer', { path : path, page : page }); %>
